--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1833,7 +1833,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #79798b;
+  background: #ffde7a;
 }
 .links-of-blogroll {
   font-size: 13px;
