--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1840,7 +1840,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #6ee0c8;
+  background: #ffff0b;
 }
 .links-of-blogroll {
   font-size: 13px;
